[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games. This project consists of 5 console math games"
authors = ["SergeyChapurin <goodwin7@list.ru>"]
repository = "https://github.com/SergeyChapurin/python-project-49.git"
readme = "README.md"
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Environment :: Console",
    "License :: Free for non-commercial use",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10"
    ]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
